@@ -62,7 +62,7 @@
          "web" : "https://github.com/atancasis/DTOne-Crypt"
       }
    },
-   "version" : "0.05",
+   "version" : "0.06",
    "x_contributors" : [
       "Arnold Tan Casis <arnold.tancasis@dtone.com>"
    ],
